# lycan

./: .gitignore  Cargo.toml  LICENSE  README.md  io.github.tutkuofnight.Lycan.json
.github/workflows/: ci.yml  release.yml
data/: io.github.tutkuofnight.Lycan.desktop  io.github.tutkuofnight.Lycan.metainfo.xml
pkg/aur/: PKGBUILD
pkg/aur-bin/: PKGBUILD
src/: cli.rs  fs_private.rs  main.rs  runner.rs  webkit_tuning.rs
src/pwa/: blocker.rs  config.rs  desktop.rs  favicon.rs  mod.rs
src/tui/: mod.rs  ui.rs
