[package]
name = "lycan"
version = "0.1.0"
edition = "2021"
description = "Lightweight PWA manager for Linux desktops"
license = "MIT"
repository = "https://github.com/tutkuofnight/lycan"
authors = ["tutkuofnight"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
gtk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_6"] }
glib = "0.18"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
url = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true