[package]
name = "lycan"
version = "0.1.2"
edition = "2021"
description = "Lightweight PWA manager for Linux desktops"
license = "MIT"
repository = "https://github.com/tutkuofnight/lycan"
authors = ["tutkuofnight"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
wry = { version = "0.55", features = ["devtools"] }
gtk = "0.18"
glib = "0.18"
webkit2gtk = { version = "2.0.2", default-features = false, features = ["v2_40"] }
clap = { version = "4", features = ["derive"] }
ureq = "3"
scraper = "0.21"
image = { version = "0.25", default-features = false, features = ["ico", "jpeg", "png", "gif"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
url = "2"
anyhow = "1"
slug = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true